# salt-tower

./: .editorconfig  .flake8  .gitignore  .markdownlint.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  renovate.json5  setup.py  tower.py  tox.ini  versions.json
.github/: renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  test.yml
1.8.0/: index.html
1.8.0/configuration/: index.html
1.8.0/installation/: index.html
1.8.0/pillar/: index.html
1.8.0/renderers/: index.html
1.8.0/renderers/filter/: index.html
1.8.0/renderers/text/: index.html
1.8.0/renderers/yamlet/: index.html
1.8.0/tower/: index.html
_pillar/: tower.py
_renderers/: filter.py  text.py  yamlet.py
docs/: .pages  20-configuration.md  40-pillar-data-file.md  configuration.md  index.md  installation.md  pillar.md  tower.md
docs/renderers/: filter.md  index.md  text.md  yamlet.md
examples/01-simple-tower/: readme.md
examples/01-simple-tower/pillar/: tower.sls
examples/01-simple-tower/pillar/common/: minion.sls
examples/01-simple-tower/pillar/minion/web2.example.org/: 10-nginx-override.sls
examples/01-simple-tower/pillar/minion/web2.example.org/files/: nginx.web2.conf
examples/01-simple-tower/pillar/role/: nginx.sls
examples/01-simple-tower/pillar/role/files/: nginx.default.conf  nginx.www.conf
examples/01-simple-tower/states/: top.sls
examples/01-simple-tower/states/nginx/: init.sls
examples/01-simple-tower/states/salt/: minion.sls
examples/02-grains/: readme.md
examples/02-grains/pillar/: tower.sls
examples/02-grains/pillar/region/eu-central-1/: 00-example.sls
examples/02-minion-include-roles/: readme.md
examples/02-minion-include-roles/pillar/: tower.sls
examples/02-minion-include-roles/pillar/minion/node1.example.org/: 00-roles.sls  10-else.sls
examples/02-minion-include-roles/pillar/role/webserver/: init.sls
latest/: 404.html  index.html  requirements.txt  sitemap.xml
latest/10-installation/: index.html
latest/20-configuration/: index.html
latest/30-tower-file/: index.html
latest/40-pillar-data-file/: index.html
latest/configuration/: index.html
latest/installation/: index.html
latest/pillar/: index.html
latest/renderers/: index.html
latest/renderers/filter/: index.html
latest/renderers/text/: index.html
latest/renderers/yamlet/: index.html
latest/search/: search_index.json
latest/tower/: index.html
main/: 404.html  index.html  sitemap.xml
main/configuration/: index.html
main/installation/: index.html
main/pillar/: index.html
main/renderers/: index.html
main/renderers/filter/: index.html
main/renderers/text/: index.html
main/renderers/yamlet/: index.html
main/search/: search_index.json
main/tower/: index.html
pillar/: tower.py
renderers/: text.py  yamlet.py
salt_tower/: loader.py
salt_tower/pillar/: tower.py
salt_tower/renderers/: filter.py  text.py  yamlet.py
test/: conftest.py  constraints.txt  master.yml  minion.yml  salt.py
test/fixtures/modules/: _pillar  _renderers
test/fixtures/pillar/: data.yaml
test/pillar/: test_tower.py  test_tower_tower.py
test/renderers/: test_filter.py  test_text.py  test_yamlet.py
typings/: __builtins__.pyi
v1.10.0/: index.html  sitemap.xml
v1.10.0/installation/: index.html
v1.10.0/pillar/: index.html
v1.10.0/renderers/: index.html
v1.10.0/renderers/yamlet/: index.html
v1.10.0/search/: search_index.json
v1.11.0/: index.html
v1.11.0/renderers/: index.html
v1.12.0/: index.html  sitemap.xml
v1.12.0/configuration/: index.html
v1.12.0/pillar/: index.html
v1.12.0/renderers/: index.html
v1.12.0/renderers/filter/: index.html
v1.8.2/: 404.html  index.html
v1.8.2/configuration/: index.html
v1.8.2/installation/: index.html
v1.8.2/pillar/: index.html
v1.8.2/renderers/: index.html
v1.9.0/: index.html  sitemap.xml
v1.9.0/configuration/: index.html
v1.9.0/installation/: index.html
v1.9.0/pillar/: index.html
v1.9.0/renderers/: index.html
v1.9.0/renderers/filter/: index.html
v1.9.0/renderers/text/: index.html
v1.9.0/search/: search_index.json
