[project]
name = "salt-tower"
version = "1.12.0"
description = "A Flexible External Salt Pillar Module"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
dependencies = ["salt"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.urls]
homepage = "https://github.com/jgraichen/salt-tower"

[project.entry-points."salt.loader"]
pillar_dirs = "salt_tower.loader:pillar_dirs"
render_dirs = "salt_tower.loader:renderers_dirs"

[project.optional-dependencies]
test = ["pylint==3.3.7", "pytest==8.3.5"]
docs = [
    "mike==2.1.3",
    "mkdocs-awesome-pages-plugin==2.10.1",
    "mkdocs-git-revision-date-plugin==0.3.2",
    'mkdocs-material==9.6.14',
    "setuptools",                             # required by mike
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["salt_tower", "test"]
exclude = ["test/fixtures"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
dev-dependencies = [
    "mypy==1.15.0",
    "pylint==3.3.7",
    "pyright>=1.1.356",
    "pytest==8.3.5",
    "ruff==0.11.11",
    "tox==4.26.0",
    "tox-uv>=1.25.0",
    "uv<0.6.0",
]
