[project]
name = "salt-tower"
version = "1.12.0"
description = "A Flexible External Salt Pillar Module"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
dependencies = ["salt"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.urls]
homepage = "https://github.com/jgraichen/salt-tower"

[project.entry-points."salt.loader"]
pillar_dirs = "salt_tower.loader:pillar_dirs"
render_dirs = "salt_tower.loader:renderers_dirs"

[project.optional-dependencies]
test = ["pylint==3.3.9", "pytest==8.4.2"]
docs = [
    "mike==2.1.3",
    "mkdocs-awesome-pages-plugin==2.10.1",
    "mkdocs-git-revision-date-plugin==0.3.2",
    'mkdocs-material==9.6.22',
    "setuptools",                             # required by mike
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pylint==3.3.9",
    "pyright~=1.1.356",
    "pytest==8.4.2",
    "ruff==0.14.1",
    "tox==4.30.3",
    "tox-uv~=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["salt_tower", "test"]
exclude = ["test/fixtures"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
builtins = ["__grains__", "__opts__", "__pillar__", "__salt__"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
# Salt's legacy setup.py requires old setuptools. Since uv 0.6.0, it
# does not fall back to reading requirements from egg-info.
build-constraint-dependencies = ["setuptools<75.6"]
